updated wording again

--- a/app/views/pages/editor_partials/_reviewing_pitches_content.html.erb
+++ b/app/views/pages/editor_partials/_reviewing_pitches_content.html.erb
@@ -9,10 +9,12 @@
 
 <p><span class="highlight">While reviewing a pitch, you should consider the three questions below. If you answer no to at least one, you should reject the pitch and mark the reason(s) why.</span></p>
 
-<h3 id="first-question">1. Is the writer's argument for why this topic is relevant for The Teen Magazine's audience convincing?</h3>
-
+<h3 id="first-question">1. Does the topic meet The Teen Magazine's content policy and is it relevant for The Teen Magazine's audience?</h3>
 <p>
-  An article is relevant to The Teen Magazine’s audience if it addresses a topic, experience, and/or problem that is felt by, or of interest to, some or most teens. It is not enough for the article to be of interest to some teens just because the topic has such a broad audience already. </p>
+  First and foremost, an article or pitch should not be approved if it does not meet The Teen Magazine's <a target="_blank" href="/choosing-a-topic">content policy</a>. It is your responsibility as an editor for The Teen Magazine to understand and uphold this policy.
+<p>
+<p>
+  Second, an article is relevant to The Teen Magazine’s audience if it addresses a topic, experience, and/or problem that is felt by, or of interest to, some or most teens. It is not enough for the article to be of interest to some teens just because the topic has such a broad audience already. </p>
 <p>
   If the article is a commentary about a current issue, it must contain some teenage perspective that makes it relevant and interesting to The Teen Magazine's audience. For example, "Stock Market Analysis-Making a Good Investment" is not suitable for The Teen Magazine while "We Do Not Know What Protects Our Liberty and Why You Should Care" is because it specifically addresses the teen reader in the article (saying <i>we need young, teen voters to be informed</i> in the introduction) and in the title (Why <i>You</i> Should Care).
 </p>
