--- a/app/views/pages/topics.html.erb
+++ b/app/views/pages/topics.html.erb
@@ -14,7 +14,7 @@
     <li>Is pornographic or obscene</li>
     <li>Contains copyrighted content</li>
   </ul>
-  <p>This includes any pitches that directly deal with or report on violence, sex, drugs, or otherwise fit into any of the above categories.</p>
+  <p>This includes any pitches that directly deal with or report on <b>violence, sex, drugs, war, terrorists, or otherwise fit into any of the above categories</b>.</p>
   <p>Any articles/pitches that are approved/published and go against these policies will be immediately taken down. The Teen Magazine also has the right to remove any writers or editors who repeatedly ignore these content policies.</p>
   <h5 id="topic-requirements"><b>The topic should be relevant to a teenage audience</b></h5>
   <p>Any article that is pitched should be specifically made for a teenage audience. This means it addresses a topic, experience, and/or problem that is felt by, or of interest to, some or most teens. It is not enough for the article to be of interest to some teens just because the topic has such a broad audience already (see diagram).</p>
