updated views to just be admin

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -20,7 +20,7 @@
     </div>
   <% end %>
   <p>Last updated <%= format_full_date(@page.updated_at) %>
-    <% if current_user.is_manager? %>
+    <% if current_user.admin? %>
     | <span style="color: gray">Viewed <%= @page.impressions %> times (admin only)</span>
     <% end %></p>
   <%= markdown @page.content %>
