--- a/app/views/layouts/writer.html.erb
+++ b/app/views/layouts/writer.html.erb
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Raptive Head Tag Manual -->
+    <script data-no-optimize="1" data-cfasync="false">
+    (function(w, d) {
+      w.adthrive = w.adthrive || {};
+      w.adthrive.cmd = w.
+      adthrive.cmd || [];
+      w.adthrive.plugin = 'adthrive-ads-manual';
+      w.adthrive.host = 'ads.adthrive.com';var s = d.createElement('script');
+      s.async = true;
+      s.referrerpolicy='no-referrer-when-downgrade';
+      s.src = 'https://' + w.adthrive.host + '/sites/6581f45a00f9c812fa0bcb0c/ads.min.js?referrer=' + w.encodeURIComponent(w.location.href) + '&cb=' + (Math.floor(Math.random() * 100) + 1);
+      var n = d.getElementsByTagName('script')[0];
+      n.parentNode.insertBefore(s, n);
+    })(window, document);
+    </script>
+    <!-- End of Raptive Head Tag -->
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-9N2YD8CLJS"></script>
     <script>
@@ -144,30 +160,5 @@
         </div>
       </section>
       <%= javascript_include_tag 'layout'%>
-      <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
-      <script>
-        window.googletag = window.googletag || {cmd: []};
-        googletag.cmd.push(function() {
-          googletag.defineSlot(
-            '/18190176,22670735396/MCM_Validation',
-            [1, 1],
-            'div-gpt-ad-1614955491295-0'
-          ).addService(googletag.pubads());
-          googletag.pubads().enableSingleRequest();
-          googletag.enableServices();
-        });
-      </script>
-      <div id="div-gpt-ad-1614955491295-0">
-        <script>
-          googletag.cmd.push(function() {
-            if (googletag.pubads().isInitialLoadDisabled()) {
-              googletag.display('div-gpt-ad-1614955491295-0');
-              googletag.refresh('div-gpt-ad-1614955491295-0');
-            } else {
-              googletag.display('div-gpt-ad-1614955491295-0');
-            }
-          });
-        </script>
-      </div>
     </body>
   </html>
