--- a/app/views/layouts/writer.html.erb
+++ b/app/views/layouts/writer.html.erb
@@ -59,7 +59,7 @@
     <% end %>
     <meta http-equiv="Content-Security-Policy" content="block-all-mixed-content">
   </head>
-  <body>
+  <body <% if @post.present? && !@post.is_published? %> class='no-ads'<% end %>>
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KP5R9TJC"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
