archived old interviews

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -180,12 +180,6 @@ body,
   }
 }
 
-.interview_pitch_flds {
-  p {
-    margin: 0;
-  }
-}
-
 .text-danger {
   color: #dc3545 !important;
 }
@@ -267,8 +261,8 @@ br {
   color: white;
   bottom: 0px;
   right: 0px;
-  background-color: #085f63 !important;
-  border-color: #085f63;
+  background-color: #33b5e5 !important;
+  border-color: #33b5e5 !important;
   font-weight: 800;
   float: right;
   font-family: verdana;
