--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -91,9 +91,9 @@
 
   <!-- Raptive - Disable ads -->
   <script>
-  window.adthrive.cmd.push(function() {
-      window.adthrive.disableAds(['*/edit', '/pitches/*', '/pitches', '*/dashboard', '/partners/*', '/pages/*', '/editors/*', '/apply', '/about-us']);
-  });
+    window.adthrive.cmd.push(function() {
+      window.adthrive.disableAds(['/edit', '/interviews', '/interviews/*', '/new', '/pitches/*', '/pitches', '/dashboard', '/partners/*', '/pages/*', '/editors/*', '/apply', '/about-us']);
+    });
   </script>
 </footer>
 <!-- Footer -->
