--- a/app/views/layouts/writer.html.erb
+++ b/app/views/layouts/writer.html.erb
@@ -124,7 +124,7 @@
                           <% elsif @show_editor_onboarding %>
                             data-step data-index="3" data-onboarding-content="New options have been added. Navigate to your editor dashboard here."
                           <% elsif @show_marketer_onboarding %>
-                            data-step data-index="1" data-onboarding-content="Congratulations on becoming an interviewer! Navigate to Interview Requests to start an interview."
+                            data-step data-index="1" data-onboarding-content="Congratulations on becoming an interviewer! Navigate to Interview Hub to start an interview."
                           <% end %>
                         >
                           <svg width="20px" height="20px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" class="svg-inline--fa fa-bars fa-w-14" role="img" viewBox="0 0 448 512">
