--- a/app/views/pitches/new_interview.html.erb
+++ b/app/views/pitches/new_interview.html.erb
@@ -1,58 +1,5 @@
-<%= image_tag "reading_magazine_auto_x2.jpg", id: "banner_writing" %>
-<div class="apply_wrapper">
-  <h3>CREATE A NEW INTERVIEW PITCH</h3>
-  <p>Fill out this form to create an interview request for a high-priority client you've been in contact with and has agreed to an interview.</p>
-  <p>For all other interview requests, you can send them to the general interview request application <%= link_to "here", "/pitch-interview", target: "_blank", class: "link_grn" %>.</p>
-  <%= form_for @pitch do |f| %>
-    <% if @pitch.errors.any? %>
-      <h6 class="mt-3 text-danger"><%= pluralize(@pitch.errors.count, "error")%> prevented this pitch from saving:</h6>
-      <ul>
-        <% @pitch.errors.full_messages.each do |msg| %>
-          <li class="text-danger">
-            <% if msg.include? 'Title' %>
-              <h6>Name of interviewee can't be blank</h6>
-            <% else %>
-              <h6><%= msg %></h6>
-            <% end %>
-          </li>
-        <% end %>
-      </ul>
-    <% end %>
-    <div class="interview_pitch_flds">
-      <%= f.text_field :title, placeholder: "Name of interviewee" %>
-      <p>What email should the writer contact for the interview? Leave blank if you don't want automated emails to be sent to the interviewee. (This will be a confirmation email and reminder to share on social media when the article is published)</p>
-      <%= f.text_field :contact_email, placeholder: "Contact email" %>
-      <p>List the main social media accounts:</p>
-      <%= f.text_field :influencer_social_media, placeholder: "Instagram: @madelyncline, TikTok: @madelyn_cline" %>
-      <p>How many total followers does this person have?
-        <%= f.select(:following_level, ['less than 100k', 'between 100k and 500k', 'between 500k and 1 million', 'over 1 million'], {prompt: "None selected"}) %></p>
-      <br>
-      <% if current_user && current_user.is_manager? %>
-        <p>Priority (select <b>High</b> for big interviews)
-          <%= f.select(:priority, ["None", "High"], {prompt: "None"}, {:class => "d-inline"}) %>
-        </p>
-        <br>
-      <% end %>
-      <p>What description fits this person the best?
-        <%= f.select(:interview_kind, ['Actor', 'Actress', 'Author', 'Artist', 'Activist', 'Content Creator', 'Entrepreneur', 'Influencer', 'Musician', 'Youtuber', 'Other'], {prompt: "None selected"}) %></p>
-      <br>
-      <p>
-        If this person has indicated that they'll share the article on social media, please indicate which platform they've agreed to. 
-        If an option is selected, a reminder email to share on social media will be sent to the contact email above when the article is published.
-      </p>
-      <%= f.select(:platform_to_share, ['Instagram story w/ link (preferred)', 'Instagram post description', 'Youtube shoutout', 'Twitter tweet', 'Pinterest post', 'LinkedIn post'], {prompt: "None selected"}) %>
-      <%= f.hidden_field :category_id, :value => @pitch.category_id %>
-      <%= f.hidden_field :user_id, :value => current_user.id %>
-      <%= f.hidden_field :deadline, :value => 6 %>
-      <br>
-      <br>
-      <%= f.text_area :description, placeholder: "Description about interviewee...", style: "min-height: 120px;" %>
-      <div class="btn_cntnr" style="float: none; position: relative; margin-bottom: 0px; padding-bottom: 0px;">
-        <div class="spinner-button spinner-border hide" style="margin-left: 38%;" role="status">
-          <span class="sr-only"></span>
-        </div>
-        <%= f.button "Create Interview Pitch", class: "newpost--new--profile submit_modal", id: "submit-comment-modal-button", style: "margin-bottom: 0px;", value: "interview" %>
-      </div>
-    </div>
-  <% end %>
+<div id="banner_writing" class="editor"></div>
+<div class="apply_wrapper pitch_form_wrapper">
+  <h1>Pitch an Interview</h1>
+  <%= render 'interview_form' %>
 </div>
