--- a/app/assets/stylesheets/writer.css.scss
+++ b/app/assets/stylesheets/writer.css.scss
@@ -476,11 +476,12 @@ a {
 }
 
 .edit_btn {
-  padding: 3px 5px;
   border-radius: 2px;
   background-color: white;
   float: left;
   position: absolute;
+  bottom: 1rem;
+  left: 1rem;
 }
 
 .flex_container_mobile_reverse_order {
@@ -499,9 +500,8 @@ a {
 }
 
 .pitch_usr {
-  font-size: 16px;
   margin-top: 0px;
-  font-style: italic;
+  margin-bottom: 4px;
 }
 
 .pitch_form_wrapper {
