--- a/app/views/pitches/show.html.erb
+++ b/app/views/pitches/show.html.erb
@@ -5,9 +5,12 @@
   <% end %>
   <h3 class="pitch_ttl"><%= @title %> <i><%= "#{@pitch.title}#{' (' << @pitch.interview_kind << ')' if @pitch.interview_kind.present?}" %></i></h3>
   <p class="pitch_usr">Pitched <% if @pitch.user.present? %> by <%= link_to(@pitch.user.try(:full_name), @pitch.user, class: "pitch_btn") %> <% end %>under <%= link_to(@pitch.category.name, @pitch.category, class: "pitch_btn") %> on <%= @pitch.created_at.strftime("%m-%d-%Y") %> </p>
+  <% if @assigned_user.present? %>
+    <p class="pitch_usr"><b>Assigned to</b> <%= link_to(@assigned_user.full_name, @assigned_user, class: "pitch_btn") %></p>
+  <% end %>
   <% if @claimed_user.present? %>
     <p class="pitch_usr">Claimed by <%= link_to(@claimed_user.full_name, @claimed_user, class: "pitch_btn") %><%= ", #{date_to_words(@pitch.claimed_at)}" unless @pitch.claimed_at.nil? %></p>
-  <% elsif @pitch.status.eql? "Approved" %>
+  <% elsif (@pitch.status.eql? "Approved") && !(@pitch.is_interview? && @pitch.assign_to_user_id.nil?) %>
     <p class="mb-3" style="background-color: #FCD04D; display: inline-block;">This pitch was approved<% if @pitch.editor_id.present?%> by <%= link_to(@editor.try(:full_name), @editor) %><% end %>! You may claim it to start your draft.</p>
   <% elsif @pitch.status.eql? "Rejected" %>
     <p><span style="background-color: #FCD04D; padding: 5px 0;">This was pitch rejected<% if @pitch.editor_id.present?%> by <%= link_to(@editor.try(:full_name), @editor) %><% end %>. Please <%= link_to "delete", pitch_path(@pitch), method: :delete, data: {confirm: "Are you sure you want to delete this pitch? This cannot be undone."} %> it and submit a new pitch that meets all the requirements as described <a target="_blank" href="/choosing-a-topic">here</a>.</span></p>
@@ -24,20 +27,24 @@
       <% end %>
     </ul>
   <% elsif @claimed_user.nil? && (@pitch.status.eql? "Ready for Review") %>
-    <p><b><i>This pitch has not been reviewed yet.</i></b></p>
+    <div class="alert alert-info" role="alert">
+      <p class='m-0'>This pitch is waiting to be reviewed.</p>
+    </div>
   <% elsif @pitch.archive %>
-    <p class="mb-3" style="background-color: #FCD04D; display: inline-block;">This pitch has been archived and will not show up under Editor Pitches.</p>
+    <div class="alert alert-warning" role="alert">
+      <p class='m-0'>This pitch has been archived and will not show up under Editor Pitches.</p>
+    </div>
   <% end %>
   <% if @pitch.notes.present? %>
-    <p class="mt-0"><i><%= @editor.try(:full_name) %> left a comment:
+    <p class="mt-0"><%= @editor.try(:full_name) %> left a comment:
         <%= @pitch.notes %><br>
-      </i></p>
+    </p>
   <% end %>
   <% if @pitch.contact_email %>
-    <i><b>Contact Email: <%= @pitch.contact_email %></b></i><br>
+    <br>Contact Email: <%= @pitch.contact_email %>
   <% end %>
   <% if @pitch.influencer_social_media %>
-    <i><b>Social media accounts: <%= @pitch.influencer_social_media %></b></i><br>
+    Social media accounts: <%= @pitch.influencer_social_media %>
   <% end %>
   <% if @pitch.priority.eql? "High" %>
     <span class="badge badge-pill badge-danger">
@@ -54,10 +61,8 @@
   <% if @pitch.admin_notes.present? %>
     <p><i style="background-color: #FCD04D;">Admin Notes: <%= @pitch.admin_notes %></i></p>
   <% end %>
-  <div id="content">
-    <div class="post_content">
-      <%= markdown @pitch.description %>
-    </div>
+  <div class="post_content">
+    <%= markdown @pitch.description %>
   </div>
   <% if @pitch.thumbnail.attached? %>
     <% if @thumbanil_credits && @thumbanil_credits.length > 0 %>
@@ -89,6 +94,7 @@
         <%= f.hidden_field :thumbnail_credits, value: @pitch.thumbnail_credits %>
       <% end %>
       <%= f.hidden_field :category_id, value: @pitch.category_id %>
+      <%= f.hidden_field :is_interview, value: @pitch.is_interview %>
       <%= f.hidden_field :pitch_id, value: @pitch.id %>
       <% if !@pitch.is_interview? %>
         <i class="d-block pb-4 ">When you claim an article idea, the pitch will show up as claimed in your dashboard, and a new draft will be started. Only claim pitches you intend to write. If you change your mind later, you can unclaim the pitch.</i>
@@ -125,8 +131,5 @@
     <% else %>
       <p class="pitch_usr">This pitch's <%= link_to("article", @article, class: "pitch_btn", target: "_blank") %> was published on <%= date_to_words(@article.publish_at) %>.</p>
     <% end %>
-  <% end %>
-  <% if ((current_user.id.eql? @pitch.user&.id) || current_user.is_manager?) && !@article&.is_published? %>
-    <%= link_to "Edit", edit_pitch_path(@pitch), :class => "link_theme edit_btn_rel", style: "float: left; margin-top: -0.5rem;" %>
   <% end %>
 </div>
