updated to be 1 month and also changed home page

--- a/app/views/welcome/categories/_category_2.html.erb
+++ b/app/views/welcome/categories/_category_2.html.erb
@@ -1,5 +1,5 @@
 <div class="ctgry_section">
-  <% @posts_approved_2.each do |post| %>
+  <% @category_2_posts.each do |post| %>
     <div class="ctgry_article">
       <%=link_to(post) do %>
         <div class="w-100 position-relative">
