--- a/app/views/welcome/categories/_category_4.html.erb
+++ b/app/views/welcome/categories/_category_4.html.erb
@@ -1,5 +1,5 @@
 <div class="ctgry_section big_block">
-  <% @posts_approved_4.each do |post| %>
+  <% @category_4_posts.each do |post| %>
     <div class="ctgry_article">
       <%=link_to(post) do %>
         <div class="w-100 position-relative">
