--- a/app/views/welcome/categories/_category_3.html.erb
+++ b/app/views/welcome/categories/_category_3.html.erb
@@ -1,5 +1,5 @@
 <div class="ctgry_section">
-  <% @posts_approved_3.each do |post| %>
+  <% @category_3_posts.each do |post| %>
     <div class="ctgry_article">
       <%=link_to(post) do %>
         <div class="w-100 position-relative">
