--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -35,7 +35,7 @@
     </div>
     <div class="content_hint"></div>
     <h1 class="section--title"><a href="/search">recent articles</a></h1>
-    <%= render_async get_recent_posts_path, retry_count: 3 %>
+      <%= render "welcome/partials/recents" %>
     <div class="content_hint"></div>
   </div>
 </div>
