--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="content_hint"></div>
-    <h1 class="section--title"><a href="/search">recent articles</a></h1>
+    <h1 class="section--title"><a href="/search">Recent articles</a></h1>
       <%= render "welcome/partials/recents" %>
     <div class="content_hint"></div>
   </div>
