--- a/app/views/pages/trending.html.erb
+++ b/app/views/pages/trending.html.erb
@@ -1,7 +1,7 @@
 <div class="category">
   <div class="category_image" style="background-image: url(<%= url_for(@trending.first.thumbnail) %>)">
     <div class="category_name_background p-4">
-      <h1>trending articles</h1>
+      <h1>Trending articles</h1>
     </div>
   </div>
   <div class="category--show">
