--- a/app/views/posts/partials/_recent.html.erb
+++ b/app/views/posts/partials/_recent.html.erb
@@ -2,7 +2,7 @@
   <div class="ctgry_article position-relative" style="margin-bottom: 18px;">
     <%=link_to(post) do %>
       <% if post.rank.present? && post.rank <= 1 %>
-        <span class="badge badge-pink" style="position: absolute; z-index: 10000; top: 5px; left: 5px;">trending 🔥</span>
+        <span class="badge badge-pink" style="position: absolute; z-index: 10000; top: 5px; left: 5px;">Trending 🔥</span>
       <% end %>
       <%= render 'posts/partials/header_image', post: post, img_class: "" %>
     <% end %>
