--- a/app/views/welcome/categories/_category_4.html.erb
+++ b/app/views/welcome/categories/_category_4.html.erb
@@ -4,7 +4,7 @@
       <%=link_to(post) do %>
         <div class="w-100 position-relative">
           <% if post.rank.present? && post.rank <= 1 %>
-              <span class="badge badge-pink" style="position: absolute; z-index: 10000; top: 5px; left: 5px;">trending 🔥</span>
+              <span class="badge badge-pink" style="position: absolute; z-index: 10000; top: 5px; left: 5px;">Trending 🔥</span>
           <% end %>
           <%= render 'posts/partials/header_image', post: post, img_class: "image_recent_articles" %>
         </div>
