--- a/app/views/layouts/partials/_slide-in-menu.html.erb
+++ b/app/views/layouts/partials/_slide-in-menu.html.erb
@@ -3,13 +3,9 @@
     <svg width="20px" height="20px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" class="svg-inline--fa fa-times fa-w-11" role="img" viewBox="0 0 352 512"><path fill="currentColor" d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"></path></svg>
   </div>
   <h2 class="mt-2"><a href="/">TTM</a></h2>
-  <a href="/categories/interviews">interviews</a>
-  <a href="/categories/student-life">student life</a>
-  <a href="/categories/wellness">wellness</a>
-  <a href="/categories/beauty-style">beauty & style</a>
-  <a href="/categories/pop-culture">pop culture</a>
-  <a href="/categories/relationships">relationships</a>
-  <a href="/categories/opinion">opinion</a>
-  <a href="/apply">apply</a>
+  <% @categories.each do |category| %>
+    <%= link_to category.name, category %>
+  <% end %>
+  <a href="/apply">Apply</a>
   <%= link_to "log in", get_profile_path %>
 </div>
