--- a/app/views/pitches/_review_pitch.html.erb
+++ b/app/views/pitches/_review_pitch.html.erb
@@ -1,9 +1,21 @@
 <h3 class="pitch_ttl mt-2">Review <i><%= @pitch.title %></i></h3>
 <p class="pitch_usr">Pitched by <%= link_to(@pitch.user.try(:full_name), @pitch.user, class: "pitch_btn") %> under <%= link_to(@pitch.category.name, @pitch.category, class: "pitch_btn") %></p>
-<% if @pitch.thumbnail.present? %>
-    <%= image_tag(@pitch.thumbnail.variant(resize_to_fill: [540, 380]), class: "image_fit_scrn") %>
-<% else %>
-    <%= image_tag url_for("thumbnail.png"), style: 'width: 100%', loading: 'lazy' %>
+<% if @pitch.thumbnail.attached? %>
+  <%= render "posts/partials/header_image", post: @pitch, img_class: "card-img-top" %>
+  <% if @thumbanil_credits && @thumbanil_credits.length > 0 %>
+    <div class="chip mt-4 mb-0">
+      PHOTO BY
+      <% if @thumbanil_credits.length.eql? 2 %>
+        <%= link_to(@thumbanil_credits[0], link_helper(@thumbanil_credits[1]), target: '_blank') %>
+      <% else %>
+        <%= @thumbanil_credits[0] %>
+      <% end %>
+    </div>
+  <% else %>
+    <div class="alert alert-danger">
+      No thumbnail credits are given
+    </div>
+  <% end %>
 <% end %>
 <%= markdown @pitch.description %>
 
@@ -15,14 +27,13 @@
       </div>
       <div class="card-body">
         <div class="small-text-wrapper">
-          <p>Prerequisite: Before reviewing any pitch, make sure you have read all of <a target="_blank" href="/pitch-requirements">Reviewing Pitches</a> and <a target="_blank" href="/pitching-new-articles">Pitching New Articles</a>.</p>
+          <p style="font-weight: bold;">Before reviewing any pitch, make sure you have read all of <a target="_blank" href="/pitch-requirements"><u>Reviewing Pitches</u></a> and <a target="_blank" href="/pitching-new-articles"><u>Pitching New Articles</u></a>.</p>
           <p>Pitch Checklist:</p>
           <ol>
             <li>Does the topic fit The Teen Magazine's <a target="_blank" href="/choosing-a-topic"><u>content requirements</u></a>?<a data-toggle="tooltip" title="See pitch requirements" class="ml-1 position-absolute link_grn" target="_blank" href="/pitch-requirements#first-question"><svg width="18px" height="18px" aria-hidden="true" focusable="false" data-prefix="fad" data-icon="info-circle" class="mb-1 svg-inline--fa fa-info-circle fa-w-16" role="img" viewBox="0 0 512 512"><g class="fa-group"><path class="fa-secondary" fill="currentColor" d="M256 8C119 8 8 119.08 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 110a42 42 0 1 1-42 42 42 42 0 0 1 42-42zm56 254a12 12 0 0 1-12 12h-88a12 12 0 0 1-12-12v-24a12 12 0 0 1 12-12h12v-64h-12a12 12 0 0 1-12-12v-24a12 12 0 0 1 12-12h64a12 12 0 0 1 12 12v100h12a12 12 0 0 1 12 12z" opacity="0.4"></path><path class="fa-primary" fill="currentColor" d="M256 202a42 42 0 1 0-42-42 42 42 0 0 0 42 42zm44 134h-12V236a12 12 0 0 0-12-12h-64a12 12 0 0 0-12 12v24a12 12 0 0 0 12 12h12v64h-12a12 12 0 0 0-12 12v24a12 12 0 0 0 12 12h88a12 12 0 0 0 12-12v-24a12 12 0 0 0-12-12z"></path></g></svg></a></li>
             <li>Is the title shareable and/or searchable?<a data-toggle="tooltip" title="See pitch requirements" class="ml-1 position-absolute link_grn" target="_blank" href="/pitch-requirements#second-question"><svg width="18px" height="18px" aria-hidden="true" focusable="false" data-prefix="fad" data-icon="info-circle" class="mb-1 svg-inline--fa fa-info-circle fa-w-16" role="img" viewBox="0 0 512 512"><g class="fa-group"><path class="fa-secondary" fill="currentColor" d="M256 8C119 8 8 119.08 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 110a42 42 0 1 1-42 42 42 42 0 0 1 42-42zm56 254a12 12 0 0 1-12 12h-88a12 12 0 0 1-12-12v-24a12 12 0 0 1 12-12h12v-64h-12a12 12 0 0 1-12-12v-24a12 12 0 0 1 12-12h64a12 12 0 0 1 12 12v100h12a12 12 0 0 1 12 12z" opacity="0.4"></path><path class="fa-primary" fill="currentColor" d="M256 202a42 42 0 1 0-42-42 42 42 0 0 0 42 42zm44 134h-12V236a12 12 0 0 0-12-12h-64a12 12 0 0 0-12 12v24a12 12 0 0 0 12 12h12v64h-12a12 12 0 0 0-12 12v24a12 12 0 0 0 12 12h88a12 12 0 0 0 12-12v-24a12 12 0 0 0-12-12z"></path></g></svg></a></li>
             <li>Does the image thumbnail follow the <a target="_blank" style="text-decoration: underline;" href="/finding-images">image policy</a>  and fit this topic well?<a data-toggle="tooltip" title="See pitch requirements" class="ml-1 position-absolute link_grn" target="_blank" href="/pitch-requirements#third-question"><svg width="18px" height="18px" aria-hidden="true" focusable="false" data-prefix="fad" data-icon="info-circle" class="mb-1 svg-inline--fa fa-info-circle fa-w-16" role="img" viewBox="0 0 512 512"><g class="fa-group"><path class="fa-secondary" fill="currentColor" d="M256 8C119 8 8 119.08 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 110a42 42 0 1 1-42 42 42 42 0 0 1 42-42zm56 254a12 12 0 0 1-12 12h-88a12 12 0 0 1-12-12v-24a12 12 0 0 1 12-12h12v-64h-12a12 12 0 0 1-12-12v-24a12 12 0 0 1 12-12h64a12 12 0 0 1 12 12v100h12a12 12 0 0 1 12 12z" opacity="0.4"></path><path class="fa-primary" fill="currentColor" d="M256 202a42 42 0 1 0-42-42 42 42 0 0 0 42 42zm44 134h-12V236a12 12 0 0 0-12-12h-64a12 12 0 0 0-12 12v24a12 12 0 0 0 12 12h12v64h-12a12 12 0 0 0-12 12v24a12 12 0 0 0 12 12h88a12 12 0 0 0 12-12v-24a12 12 0 0 0-12-12z"></path></g></svg></a></li>
           </ol>
-          <p>If you answered yes to all these questions, you may choose "Approved" from the dropdown menu and save. If you answered no to at least one of the questions, select "Rejected," and mark the reason(s) why. If you are unsure, either let another editor review this pitch or post in the Discord's <b>#editor-chat</b> to ask a clarifying question about the pitch requirements.</p>
         </div>
         <div class="pb-1">
           <div class="alert alert-info" role="alert">
@@ -30,9 +41,6 @@
           </div>
           <p class="d-inline">Reject or Approve pitch:</p>
           <%= f.select :status, options_for_select(["Approved", "Rejected"], {prompt: "Select status"}), {}, {:onChange => "select_status();"} %>
-        </div>
-        <div class="small-text-wrapper">
-          <p class="accepted-descr">Make sure you've answered yes to all the above questions before approving.</p>
         </div>
         <p class="rejected-reason hide mb-1 mt-1">*Select reason(s) for rejecting:</p>
         <div class="small-text-wrapper">
