--- a/app/views/layouts/partials/_social_post_tags.html.erb
+++ b/app/views/layouts/partials/_social_post_tags.html.erb
@@ -3,7 +3,7 @@
 <meta property="og:site_name"          content="The Teen Magazine" />
 <meta property="og:title"              content="<%= post.title %>" />
 <% if post.thumbnail.attached? %>
-    <meta property="og:image"          content="<%= request.base_url + url_for(post.thumbnail.variant(resize_to_fill: [1200, 630], format: 'webp')) %>" />
+    <meta property="og:image"          content="<%= request.base_url + url_for(post.thumbnail) %>" />
     <meta property="og:image:width"    content="1200" />
     <meta property="og:image:height"   content="630" />
 <% end %>
@@ -11,6 +11,6 @@
 <meta name="twitter:site" content="@ttm_magazine">
 <meta name="twitter:title" content="<%= post.title %>">
 <% if post.thumbnail.attached? %>
-    <meta name="twitter:image" content="<%= request.base_url + url_for(post.thumbnail.variant(resize_to_fill: [1600, 900], format: 'webp')) %>">
+    <meta name="twitter:image" content="<%= request.base_url + url_for(post.thumbnail) %>">
 <% end %>
 <meta name="twitter:domain" content="TheTeenMagazine.com">
