--- a/app/views/layouts/partials/_social_post_tags.html.erb
+++ b/app/views/layouts/partials/_social_post_tags.html.erb
@@ -3,7 +3,7 @@
 <meta property="og:site_name"          content="The Teen Magazine" />
 <meta property="og:title"              content="<%= post.title %>" />
 <% if post.thumbnail.attached? %>
-    <meta property="og:image"          content="<%= rails_blob_url(post.thumbnail, disposition: "attachment") %>" />
+    <meta property="og:image"          content="<%= post.thumbnail.url %>" />
     <meta property="og:image:width"    content="1200" />
     <meta property="og:image:height"   content="630" />
 <% end %>
@@ -11,6 +11,6 @@
 <meta name="twitter:site" content="@ttm_magazine">
 <meta name="twitter:title" content="<%= post.title %>">
 <% if post.thumbnail.attached? %>
-    <meta name="twitter:image" content="<%= rails_blob_url(post.thumbnail, disposition: "attachment") %>">
+    <meta name="twitter:image" content="<%= post.thumbnail.url %>">
 <% end %>
 <meta name="twitter:domain" content="TheTeenMagazine.com">
