added max width to images in pages

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -5,6 +5,15 @@
   min-height: 200px;
 }
 
+#page-content {
+  figure {
+    margin: 0px auto;
+  }
+  img {
+    max-width: 100%;
+  }
+}
+
 .criteria {
   background-color: white;
   span {
