--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
     <% end %>
     <meta http-equiv="Content-Security-Policy" content="block-all-mixed-content">
   </head>
-  <body>
+  <body <% if @post.present? && !@post.is_published? %> class='no-ads'<% end %>>
     <div id="site-wrapper">
       <%= render "layouts/partials/slide-in-menu" %>
       <%= render "layouts/partials/header-mobile" %>
