--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -262,7 +262,7 @@
   min-width: 330px;
   max-width: 330px;
   z-index: 30;
-  margin: 240px 20px 0 20px;
+  margin: 240px 0 0 20px;
   img {
     width: 100%;
   }
@@ -277,10 +277,12 @@
   display: flex;
   flex-direction: row;
   margin: 0 auto;
+  width: fit-content;
+  max-width: 100%;
 }
 
 .content_wrapper {
-  max-width: 740px;
+  max-width: 840px;
 }
 
 .skinny {
@@ -370,7 +372,7 @@
   padding: 0 30px;
   .post_content {
     p {
-      font-size: 19px !important;
+      font-size: 22px !important;
       line-height: 1.75em !important;
       margin-bottom: 1.67em 0 !important;
     }
@@ -494,12 +496,6 @@
     .second_author {
       margin-top: 5px;
     }
-  }
-}
-
-@media (min-width: 930px) {
-  .flex_wrapper_columns {
-    margin-left: 20px !important;
   }
 }
 
