--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -12,7 +12,7 @@
   <%= render 'posts/partials/header_image', post: @post, img_class: "post_image" %>
 </div>
 <div class="flex_wrapper_posts mb-4">
-  <div class="skinny wrapper_padding" id="post_show_content">
+  <div class="wrapper_padding" id="post_show_content">
     <div class="flex_wrapper_columns">
       <div class="content_wrapper">
         <header id="post_title_show">
