--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -68,7 +68,7 @@
       max-height: 94px;
       overflow: hidden;
       img {
-        width: 130px;
+        width: 90px;
         height: 90px;
         object-fit: cover;
         z-index: 1;
@@ -76,7 +76,7 @@
         background-size: cover;
       }
       p {
-        font-size: 1rem;
+        font-size: 22px;
         font-style: normal;
         margin: 0;
         margin-left: 8px;
