--- a/app/views/posts/_draft.html.erb
+++ b/app/views/posts/_draft.html.erb
@@ -25,7 +25,7 @@
 </div>
 </div>
 <div class="flex_wrapper_posts mb-4">
-  <div class="skinny wrapper_padding" id="post_show_content">
+  <div class="wrapper_padding" id="post_show_content">
     <div class="flex_wrapper_columns">
       <div class="content_wrapper">
         <header id="post_title_show">
