--- a/app/views/application_mailer/custom_message_template.html.erb
+++ b/app/views/application_mailer/custom_message_template.html.erb
@@ -69,7 +69,7 @@
                         <span style="display:inline-block; vertical-align:middle; margin:29px 0 26px; border-bottom:1px solid #cecece; width:100px;"></span>
                       <% end %>
                       <p>Hi<% if @subscriber&.first_name.present? %><%=" #{@subscriber&.first_name}" %><% end %>,</p>
-                      <%= markdown @newsletter.message %>
+                      <%= markdown @newsletter.message, @subscriber&.email %>
                       <p>Best,<br/>
                         <%= @newsletter.user.first_name %></p>
                       <% if @newsletter.action_button.present? %>
@@ -87,7 +87,9 @@
               </tr>
               <tr>
                 <td style="text-align:center;">
-                  <p style="font-size:16px; color:rgba(69, 80, 86, 0.7411764705882353); line-height:18px; margin:0 0 0;">&copy; <strong>www.theteenmagazine.com</strong></p>
+                  <p style="font-size:16px; color:rgba(69, 80, 86, 0.7411764705882353); line-height:18px; margin:0 0 0;">&copy; <strong>
+                    <a href="https://theteenmagazine.com/">www.theteenmagazine.com</a>
+                  </strong></p>
                 </td>
               </tr>
               <tr>
