--- a/app/views/application_mailer/editor_picks.html.erb
+++ b/app/views/application_mailer/editor_picks.html.erb
@@ -125,7 +125,7 @@
                                                           <td valign="top" style="padding-top:0;padding-right:18px;padding-bottom:9px;padding-left:18px;word-break:break-word;color:#202020;font-family:'Lato','Helvetica Neue',Helvetica,Arial,sans-serif;line-height:150%;">
                                                             <font face="playfair display, georgia, times new roman, serif">
                                                               <p class="content-message" style="font-size:16px; color: #545454;">
-                                                                <%= markdown @newsletter.message %>
+                                                                <%= markdown @newsletter.message, @subscriber.email %>
                                                               </p>
                                                             </font>
                                                           </td>
@@ -271,7 +271,9 @@
               </tr>
               <tr>
                 <td style="text-align:center;">
-                  <p style="font-size:16px; color:rgba(69, 80, 86, 0.7411764705882353); line-height:18px; margin:0 0 0;">&copy; <strong>www.theteenmagazine.com</strong></p>
+                  <p style="font-size:16px; color:rgba(69, 80, 86, 0.7411764705882353); line-height:18px; margin:0 0 0;">&copy; 
+                    <strong><a href="https://theteenmagazine.com/">www.theteenmagazine.com</a></strong>
+                  </p>
                 </td>
               </tr>
               <tr>
