--- a/app/views/application_mailer/plain_message_template.html.erb
+++ b/app/views/application_mailer/plain_message_template.html.erb
@@ -4,6 +4,6 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <%= markdown @newsletter.message %>
+    <%= markdown @newsletter.message, @user.email %>
   </body>
 </html>
